# ML-MCTS

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake
Games/: CMakeLists.txt  Makefile  cmake_install.cmake
Games/SimpleGame/: SimpleGame.h
Games/TicTacToe/: TicTacToe.h
Games/UltimateXO/: UltimateXO.h
include/: Game.h  config.h.in  fsm.h  mcts.h  neural.h  thread_interface.h  user_interface.h
mcts/include/: mcts.h  thread_interface.h
mcts/src/: neural.cpp  user_interface.cpp
src/: main.cpp  mcts.cpp  neural.cpp  user_interface.cpp
tests/: test_mcts.cpp
